syntax = "proto3";

package benchmark;
option go_package = "github.com/onflow/flow-go/integration/becnhmark/proto";

import "google/protobuf/empty.proto";

message StartMacroBenchmarkRequest {}
message StartMacroBenchmarkResponse {}

message GetMacroBenchmarkRequest {}
message GetMacroBenchmarkResponse {}

message ListMacroBenchmarksResponse {}

message StatusResponse {}

service Benchmark {
  rpc StartMacroBenchmark(StartMacroBenchmarkRequest)
      returns (stream StartMacroBenchmarkResponse) {}
  rpc GetMacroBenchmark(GetMacroBenchmarkRequest)
      returns (GetMacroBenchmarkResponse) {}
  rpc ListMacroBenchmarks(google.protobuf.Empty)
      returns (ListMacroBenchmarksResponse) {}

  rpc Status(google.protobuf.Empty) returns (StatusResponse) {}
}

